# CodingCircle

./: .gitignore  LICENSE.txt  README.md
001_PrefixSearch/: .gitignore  README.md  go.mod  main.go  sample.txt
002_LinkedList/: README.md  go.mod  main.go
002_LinkedList/linkedlist/: list.go  list_test.go  node.go
003_Median/: README.md  go.mod  main.go
004_Cpp_Maximum/: CMakeLists.txt  TestRunningMaximum.cpp
004_Go_Maximum/: READNE.md  go.mod
004_Go_Maximum/maximum/: runnung_maximum.go  runnung_maximum_test.go
005_TicTacToe/: README.md
005_TicTacToe/tictactoe/: ist_gewonnen.go  ist_gewonnen_test.go
006_Heap/: README.md  go.mod  main.go
006_Heap/heap/: min_heap.go
007_WarpSpeed/: README.md
007_WarpSpeed/plzsort/: plz_sort.go  plz_sort_test.go
008_Schleife/: README.md
008_Schleife/slist/: slist.go  slist_test.go
009_AlleBisAufEinen/: README.md
009_AlleBisAufEinen/factors/: get_factors.go  get_factors_test.go
010_ConsCarCdr/: README.md
010_ConsCarCdr/lisp/: lisp.go  lisp_test.go
011_DasXliegtImNorden/: README.md  go.mod
011_DasXliegtImNorden/geo/: node.go  nodemap.go  nodemap_test.go
012_KleinerGehtFastImmer/: README.md  go.mod
012_KleinerGehtFastImmer/rle/: decode.go  encode.go  encode_test.go
013_MarkovKette/: README.md  go.mod  main.go
013_MarkovKette/markov/: markov.go
014_MaximumLoad/: README.md  go.mod
014_MaximumLoad/getload/: getload.go  getload_test.go
015_GetMaximum/: README.md  go.mod
015_GetMaximum/maximum/: maximum.go  maximum_test.go
016_EinheitsBruch/: README.md  go.mod
(+2 files in other folders)
